--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -36,6 +36,13 @@
   tags: always
 
 - include_tasks:
+    file: "{{ steamengine_project_type }}/structure.yml"
+    apply:
+      tags:
+        - steamengine_structure
+  tags: always
+
+- include_tasks:
     file: common/runtime.yml
     apply:
       tags:
