--- a/tasks/play/deploy.yml
+++ b/tasks/play/deploy.yml
@@ -44,7 +44,7 @@
 
 - name: "Is there a new build: {{ get_url_build.changed }}"
   set_fact:
-    new_build_to_deploy: get_url_build.changed
+    new_build_to_deploy: "{{ get_url_build.changed }}"
   tags:
     - steamengine_deploy_play2
 
