--- a/tasks/tomcat7/deploy.yml
+++ b/tasks/tomcat7/deploy.yml
@@ -152,7 +152,7 @@
 
 - name: "Is there a new build: {{ get_url_build.changed }}"
   set_fact:
-    new_build_to_deploy: get_url_build.changed
+    new_build_to_deploy: "{{ get_url_build.changed }}"
   tags:
     - steamengine_deploy_tomcat7
 
