--- a/tasks/symfony4/deploy.yml
+++ b/tasks/symfony4/deploy.yml
@@ -100,6 +100,15 @@
   tags:
     - steamengine_deploy_sf4
 
+- name: Create configuration link
+  file:
+    state: link
+    src: "{{ steamengine_conf_path }}/.env.local"
+    dest: "{{ steamengine_project_root_path_web }}/.env.local"
+  when: new_build_to_deploy
+  tags:
+    - steamengine_deploy_sf4
+
 - name: Create logs link directory
   file:
     state: link
