--- a/molecule/symfony4/playbook.yml
+++ b/molecule/symfony4/playbook.yml
@@ -36,15 +36,14 @@
             server_name: "localhost"
             index: "/"
             extra_parameters: |
-
               root /test_symfony4/project_root/www/public;
               location / {
-                  try_files $uri /index.php$is_args$args;
+                try_files $uri /index.php$is_args$args;
               }
               location ~ ^/index\.php(/|$) {
-                  fastcgi_pass 127.0.0.1:9000;
-                  fastcgi_split_path_info ^(.+\.php)(/.*)$;
-                  include fastcgi_params;
+                fastcgi_pass 127.0.0.1:9000;
+                fastcgi_split_path_info ^(.+\.php)(/.*)$;
+                include fastcgi_params;
                 fastcgi_param SCRIPT_FILENAME $realpath_root$fastcgi_script_name;
                 fastcgi_param DOCUMENT_ROOT $realpath_root;
                 internal;
@@ -59,4 +58,4 @@
         steamengine_build_url: https://delivery.steamulo.org/SteamEngineV2_tests/symfony5_test.zip
         steamengine_build_checksum: sha1:ac336c6672f5b62f3b65b682311c9dd0a7a6654c
         steamengine_project_configuration:
-          APP_ENV: prod
+          APP_ENV: dev
