--- a/tasks/symfony4/deploy.yml
+++ b/tasks/symfony4/deploy.yml
@@ -105,7 +105,7 @@
     state: link
     src: "{{ steamengine_conf_path }}/.env.local"
     dest: "{{ steamengine_project_root_path_web }}/.env.local"
-  when: new_build_to_deploy
+  when: new_build_to_deploy and steamengine_project_configuration is defined
   tags:
     - steamengine_deploy_sf4
 
