--- a/molecule/drupal8/prepare.yml
+++ b/molecule/drupal8/prepare.yml
@@ -14,3 +14,8 @@
           MYSQL_USER: drupal
           MYSQL_PASSWORD: drupal
         command: "mysqld --character-set-server=utf8mb4 --max_allowed_packet=32M"
+    - name: Add MySQL Service Container to inventory
+      add_host:
+        name: mysql-drupal
+        ansible_connection: docker
+        changed_when: false
