--- a/tasks/nodejs/runtime.yml
+++ b/tasks/nodejs/runtime.yml
@@ -19,3 +19,12 @@
     name: "{{ steamengine_project_name }}"
   tags:
     - steamengine_runtime_nodejs
+
+- name: "Add nginx user in {{ steamengine_app_user }} group"
+  user:
+    name: "{{ (ansible_os_family == 'RedHat') | ternary('nginx', 'www-data') }}"
+    groups: "{{ steamengine_app_user }}"
+    append: true
+  when: steamengine_nodejs_add_nginx_app_group
+  tags:
+    - steamengine_runtime_nodejs
